# bookmarks

./: .manifest.json  Cargo.toml  README.md  SKILL.md
scripts/: bookmarks.py
skills/bookmarks/: SKILL.md
src/: bookmark.rs  finder.rs  main.rs  write.rs
src/cmd/: analyze.rs  deadlinks.rs  delete.rs  dupes.rs  mkdir.rs  mod.rs  mv.rs  mvdir.rs  rename.rs  search.rs  sort.rs  stats.rs  structure.rs
