[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
indicatif = "0.17"
anyhow = "1"
fuzzy-matcher = "0.3"
